Modified fontawesome scripts

--- a/about.html
+++ b/about.html
@@ -6,12 +6,13 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <script src="https://use.fontawesome.com/2f5ae164e2.js"></script>
+
     <link rel="stylesheet" media="(orientation:portrait) and (max-width: 575.98px)" href="css/mobile.css" />
     <link rel="stylesheet" media="(min-width: 576px) and (max-width: 767.98px) " href="css/landscape.css" />
     <link rel="stylesheet" media="(min-width: 768px) and (max-width: 991.98px) " href="css/ipad.css" />
     <link rel="stylesheet" media=" (min-width:992px)" href="css/desktop.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  
   </head>
   <body>
     <section id = "navigation-bar">
@@ -78,9 +79,7 @@
                    Whether that may be working to solve a humanitarian problem or
                    volunteering in my spare time, I strive to become a better person everyday.
                 </p>
-                <h4 data-aos="fade-down"
-     data-aos-easing="linear"
-     data-aos-duration="1500"><span id = "innovate">Why I Love To Innovate</span></h4>
+                <h4 data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500"><span id = "innovate">Why I Love To Innovate</span></h4>
                 <p data-aos="fade-down"
      data-aos-easing="linear"
      data-aos-duration="1500">
@@ -89,7 +88,7 @@
                   An example would be Thomas Edison, for example, with the invention of the light bulb(electricity)
                   that made modern-day inventions like computers possible, which, at the time, most people thought was “impossible”.
                   The word “impossible” is what motivates me to innovate because I love proving others wrong that nothing on Earth is impossible.
-                  I approach everything in life as attainable and possible with a positive attitude, optimism, curiosity, and courage to explore the unknown. 
+                  I approach everything in life as attainable and possible with a positive attitude, optimism, curiosity, and courage to explore the unknown.
                 </p>
               </div>
             </div>
@@ -128,7 +127,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script type="text/javascript" src = "index.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <script src="https://use.fontawesome.com/2f5ae164e2.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
    <script>
      AOS.init();
