Fixed linkedin icon

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" media="(min-width: 768px) and (max-width: 991.98px) " href="css/ipad.css" />
     <link rel="stylesheet" media=" (min-width:992px)" href="css/desktop.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  
+
   </head>
   <body>
     <section id = "navigation-bar">
@@ -112,7 +112,7 @@
 
             <div class="col" id ="social-links">
               <a href="https://github.com/ron253"><i class="fa fa-lg fa-github" aria-hidden="true"></i></a>
-              <a href="https://www.linkedin.com/in/ron23/"><i class="fa fa-lg fa-linkedin-square" aria-hidden="true"></i></a>
+              <a href="https://www.linkedin.com/in/ron23/"><i class="fa fa-lg fa-linkedin" aria-hidden="true"></i></a>
             </div>
 
           </div>
