--- a/projects.html
+++ b/projects.html
@@ -249,7 +249,7 @@
 
             <div class="col" id ="social-links">
               <a href="https://github.com/ron253"><i class="fa fa-lg fa-github" aria-hidden="true"></i></a>
-              <a href="https://www.linkedin.com/in/ron23/"><i class="fa fa-lg fa-linkedin-square" aria-hidden="true"></i></a>
+              <a href="https://www.linkedin.com/in/ron23/"><i class="fa fa-lg fa-linkedin" aria-hidden="true"></i></a>
             </div>
 
           </div>
