--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </p>
         <button onclick = "location.href = 'about.html'" type="button" class="btn btn-primary btn-sm">Learn More</button>
         <a href="https://github.com/ron253">  <i class="fa fa-lg fa-github" aria-hidden="true"></i></a>
-        <a href="https://www.linkedin.com/in/ron23/"><i class="fa fa-lg fa-linkedin-square" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/ron23/"><i class="fa fa-lg fa-linkedin" aria-hidden="true"></i></a>
 
 
       </div>
@@ -112,7 +112,7 @@
 
         <div class="col" id ="social-links">
           <a href="https://github.com/ron253"><i class="fa fa-lg fa-github" aria-hidden="true"></i></a>
-          <a href="https://www.linkedin.com/in/ron23/"><i class="fa fa-lg fa-linkedin-square" aria-hidden="true"></i></a>
+          <a href="https://www.linkedin.com/in/ron23/"><i class="fa fa-lg fa-linkedin" aria-hidden="true"></i></a>
         </div>
 
       </div>
