--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
             <div class="row" id = "row1">
               <div class="col" data-aos="fade-up"
      data-aos-duration="3000">
-                <img id = "profile-pic" class="img-fluid " src= "profile-pic.jpg" alt="Responsive image">
+                <img id = "profile-pic" src= "profile-pic.jpg" alt="Responsive image">
               </div>
             </div>
 
@@ -65,30 +65,28 @@
 
             <div class="row" id = "row3">
               <div class="col">
-                <h4 data-aos="fade-down"
-     data-aos-easing="linear"
-     data-aos-duration="1500"><span id = "life-philosophy" >My Life Philosophy</span></h4>
-                <p data-aos="fade-down"
-     data-aos-easing="linear"
-     data-aos-duration="1500">
-                  I call myself an entrepreneurial, creative thinker because I love innovating. I love innovating because
+                <h1 class = "title"><span >My Life Philosophy</span></h1>
+                <p>
+                  I call myself an entrepreneurial, creative thinker because I enjoy innovating. Innovating to me means putting my ideas into reality.
+                  Whether that may be experimenting with new technology or refining an existing technology, I like to solve humanitarian problems through the
+                  use of technology.
+                  The most important life philosophy of mine that I hold strongly each and everyday of my life is this phrase from the Bible, "Do not work for food which perishes, but for the food which endures to eternal
+                  life <i>(John 6:27).</i>" This phrase to me means seeking knowlege and understanding of this world through God's given gift of being able to think, reason, and explore. Nothing is more important to me than to learn everyday and have a open-minded, world-view of this world. I do this by seeking knowledge and challenges that will allow me to develop personally, professionally, spiritually, and mentally.
+                  This is also relates to why I love to innovate because this challenges me to self-learn and adapt to changes, inspire others with my creative ideas, and stepping outside my comfort zone.
+                  I strive to do the best with what I have and approach life with optimism, positivity, and curiosity.
+
+                   <!-- I love innovating because
                   I believe that I can make this world a better place by putting my ideas into reality.
                   I believe that everyone in this world has wonderful ideas that can make a positive change in this world.
                   But what separates those that do change this world and those that don’t is whether the person believes in themselves.
-                   I believe in myself that I can and able to change this world by making small, marginal positive impacts on others.
+                   I believe in myself that I can and able to change this world by making small positive impacts on others.
                    Whether that may be working to solve a humanitarian problem or
-                   volunteering in my spare time, I strive to become a better person everyday.
+                   learning in my spare time, I strive to become a better person everyday. -->
                 </p>
-                <h4 data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500"><span id = "innovate">Why I Love To Innovate</span></h4>
-                <p data-aos="fade-down"
-     data-aos-easing="linear"
-     data-aos-duration="1500">
-                  I believe that drastic changes happen through innovation.
-                  If you take a look at all the innovations in today’s world, they were all inspired by previous inventions.
-                  An example would be Thomas Edison, for example, with the invention of the light bulb(electricity)
-                  that made modern-day inventions like computers possible, which, at the time, most people thought was “impossible”.
-                  The word “impossible” is what motivates me to innovate because I love proving others wrong that nothing on Earth is impossible.
-                  I approach everything in life as attainable and possible with a positive attitude, optimism, curiosity, and courage to explore the unknown.
+                <h1 class = "title"><span>Why do I aspire to become a web developer?</span></h1>
+                <p>
+                  Honestly speaking, I don't know what specific career path I want to partake, but I have an interest in doing anything that is technical and requires problem-solving. My interest right now is programming
+                  ,and web development seems to be an interest to me because it's hands-on, flexible, and allows me to do side gigs.
                 </p>
               </div>
             </div>
@@ -126,7 +124,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <script type="text/javascript" src = "index.js"></script>
     <script src="https://use.fontawesome.com/2f5ae164e2.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
    <script>
