--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   </head>
   <body>
-    <section id = "navigation-bar" >
+    <section id = "navigation-bar" data-aos="zoom-in" >
       <div class="container">
         <nav class="navbar navbar-expand-sm navbar-custom">
           <a class="navbar-brand" href="index.html">RH</a>
@@ -124,7 +124,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <script type="text/javascript" src = "index.js" async></script>
     <script src="https://use.fontawesome.com/2f5ae164e2.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
    <script>
