Added responsive meta tag

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Contact</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" media=" (min-width:992px)" href="css/desktop.css" />
     <link rel="stylesheet" media="(orientation:portrait) and (max-width: 575.98px)" href="css/mobile.css" />
@@ -114,6 +115,6 @@
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/2f5ae164e2.js"></script>
     <script src="/javascript/func.js"></script>
-  
+
   </body>
 </html>
