modified rectangle's width

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="col-md-6 main">
         <h4><span id = "hp1">Hi, I'm</span></h4>
         <h1><span id ="hp2">Ron Huang</span></h1>
-        <h5><span id = "hp3">Aspiring Web Developer</span></h5>
+        <h5><span id = "hp3">Aspiring Innovator</span></h5>
         <div class="rectangle">
 
         </div>
