--- a/about.html
+++ b/about.html
@@ -83,9 +83,11 @@
                 </p>
                 <h1 class = "title"><span>What got me into programming?</span></h1>
                 <p>
-                  I wasn't interested in programming at all when I took my first programming class as a high school senior. I didn't like it at first because I didn't understand how code can be applied to real world problems besides knowing how to print "Hello World" in JAVA. What got me hooked to programming was my first internship at City of LA as a Gender Equity researcher in which I thought of an innovative approach called web-scraping to automate the process of reviewing non-gender inclusive pronouns across City web pages. This experience taught me how to crtical think on the job by understanding how to use code to automate some of the manual tasks I was doing, which was manually reviewing pronouns on City web pages one-by-one.
-                  I fell in love with programming ever since because I felt like I can innovate anything I want with code, use code to solve real world problems, and I enjoy problem-solving. I am the type of person who likes to know what, why, and how something works, and the opportunity to intern as a Gender Equity intern
-                  allowed me to discover those questions along the way.
+                  I wasn't interested in programming at all when I took my first programming class as a high school senior. I didn't like it at first because I didn't understand how code can be applied to real world problems besides knowing how to print "Hello World" in JAVA. What got me hooked to programming was my first internship as a Gender Equity researcher in which I thought of an innovative approach called web-scraping to automate the process of reviewing pronouns on City websites. This experience taught me how to crtical think on the job by
+                  using my creativity to find innovative ways to solve a problem, and web scraping was something I came up with to make my task easier by not having to manually search for the type of pronouns used across different City web pages.
+                  I fell in love with programming ever since because I feel like I am playing with magic by using code to build amazingly cool things that had never existed before. But honestly speaking, I love coding because I just enjoy googling and stealing passwords haha jk. 
+                   I am the type of person who likes to know what, why, and how something works, and the opportunity to intern at ITA
+                  allowed me to discover those questions about code along the way.
                 </p>
               </div>
             </div>
