--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" href="projects.html">Projects <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://www.figma.com/file/Ngka1et1AcBQOEpRmB5xL6Sd/Resume-Template?node-id=0%3A1">Resume</a>
+                <a class="nav-link" href="https://docs.google.com/document/d/1NQZQfXEaIPTWR3pqdU5rnM8mZpWrs-8TDcTuD06Vjmg/edit?usp=sharing">Resume</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About</a>
